--- a/css/custom.css
+++ b/css/custom.css
@@ -27,5 +27,10 @@
 }
 
 .main-item {
-    padding: 0;
+    padding: 0 30px 0 0;
+    text-align: justify;
+}
+
+.main-item > h3 > i {
+    margin-left: 10px;
 }
